<package>
  <name>system_monitor</name>
  <version>0.1.0</version>
  <description>
    System monitoring tools for ROS
  </description>
  <author>Ralf Kaestner</author>
  <author>Jerome Maye</author>
  <author>Ussama Naal</author>
  <maintainer email="usa.naal@gmail.com">Ussama Naal</maintainer>
  <license>BSD</license>
  <url>http://github.com/Samahu/ros-system-monitor</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sysstat</run_depend>
  <run_depend>hddtemp</run_depend>
  <run_depend>ntpdate</run_depend>
  <run_depend>ifstat</run_depend>
</package>
